PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/MapExistsValueList.pf
module MapExistsValueList {

    a [Int, Int] = {1:1, 2:2, 3:3}

    fun testSomething() : [Int] {

        i [Int] = $a
         
        return i
    }
}