PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/MapExistsValueList.pf
module MapExistsValueList {

    fun testSomething() : [Int] {

        i [Int] = $a
         
        return i
    }
}